--- a/OnlineBankingMVC/Views/Admin/Login.cshtml
+++ b/OnlineBankingMVC/Views/Admin/Login.cshtml
@@ -8,20 +8,20 @@
 
 {
 
-    <div class="form-group row">
-    @Html.LabelFor(model => model.AccountNumber, htmlAttributes: new { @class = "control-label col-md-2" })
-    <div class="col-md-6">
+    <div class="form-group">
+    @Html.LabelFor(model => model.AccountNumber, htmlAttributes: new { @class = "control-label" })
+    
         @Html.EditorFor(model => model.AccountNumber, new { htmlAttributes = new { @class = "form-control" } })
         @Html.ValidationMessageFor(model => model.AccountNumber, "", new { @class = "text-danger" })
-    </div>
+   
 </div>
 
-<div class="form-group row">
-    @Html.LabelFor(model => model.LoginPassword, htmlAttributes: new { @class = "control-label col-md-2" })
-    <div class="col-md-6">
+<div class="form-group">
+    @Html.LabelFor(model => model.LoginPassword, htmlAttributes: new { @class = "control-label" })
+   
         @Html.EditorFor(model => model.LoginPassword, new { htmlAttributes = new { @class = "form-control" } })
         @Html.ValidationMessageFor(model => model.LoginPassword, "", new { @class = "text-danger" })
-    </div>
+    
 </div>
 
 
@@ -31,9 +31,3 @@
     </div>
 </div>
 }
-
-<div class="form-group row">
-    <div class="col-md-offset-2 col-md-10">
-      @Html.ActionLink("GenerateOtp","GenerateOtp","User")
-    </div>
-</div>
