--- a/OnlineBankingMVC/Views/Home/Index.cshtml
+++ b/OnlineBankingMVC/Views/Home/Index.cshtml
@@ -1,25 +1,22 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container">
-        <a class="navbar-brand" href="#">ONLINE BANKING</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <p class="nav-link">@Html.ActionLink("Create A New Account","AddAccount","AccountProfile",null,new { @class = "btn btn-primary" })</p>
-                </li>
-                <li class="nav-item">
-                    <p class="nav-link">@Html.ActionLink("Register For INTERNET banking","Create","User",null,new { @class = "btn btn-primary" })</p>
-                </li>
-                <li class="nav-item">
-                    <p class="nav-link">@Html.ActionLink("Login","Login","User",null, new { @class = "btn btn-primary" })</p>
-                </li>
-            </ul>
+<body>
+    <div class="container d-flex justify-content-center align-items-center flex-column">
+        <div class="info-text text-center mb-4">
+            <p>Welcome to our online banking platform. Enjoy convenient and secure banking services from anywhere.</p>
+            <p>Register today to access a wide range of online banking features.</p>
+        </div>
+        <div class="action-buttons text-center">
+            <p>@Html.ActionLink("Register Now", "Create", "User", null, new { @class = "btn btn-primary" })</p>
+            <p>@Html.ActionLink("Open Account", "AddAccount", "AccountProfile", null, new { @class = "btn btn-primary" })</p>
+            <p>@Html.ActionLink("Login", "Login", "User", null, new { @class = "btn btn-primary" })</p>
         </div>
     </div>
-</nav>
+
+   
+
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script>
+</body>
