--- a/OnlineBankingMVC/Views/User/ResetPassword.cshtml
+++ b/OnlineBankingMVC/Views/User/ResetPassword.cshtml
@@ -1,14 +1,8 @@
 @model OnlineBankingMVC.Models.UserProfileViewModel
-@{
-    ViewBag.Title = "Login";
-}
-
-<h2>Login A Registered User</h2>
-@using (@Html.BeginForm("Login")) 
-
-{
-
-    <div class="form-group row">
+@using(
+    @Html.BeginForm("ResetPassword","User",FormMethod.Post)
+){
+       <div class="form-group row">
     @Html.LabelFor(model => model.AccountNumber, htmlAttributes: new { @class = "control-label col-md-2" })
     <div class="col-md-6">
         @Html.EditorFor(model => model.AccountNumber, new { htmlAttributes = new { @class = "form-control" } })
@@ -27,13 +21,7 @@
 
 <div class="form-group row">
     <div class="col-md-offset-2 col-md-10">
-        <input type="submit" value="LOGIN" class="btn btn-outline-success" />
+        <input type="submit" value="ResetPassword" class="btn btn-outline-success" />
     </div>
 </div>
 }
-
-<div class="form-group row">
-    <div class="col-md-offset-2 col-md-10">
-      @Html.ActionLink("GenerateOtp","GenerateOtp","User")
-    </div>
-</div>
