--- a/OnlineBankingMVC/Views/User/Login.cshtml
+++ b/OnlineBankingMVC/Views/User/Login.cshtml
@@ -4,6 +4,7 @@
 }
 
 <h2>Login A Registered User</h2>
+@if(@ViewData["ErrorMessage"]==null){
 @using (@Html.BeginForm("Login")) 
 
 {
@@ -23,17 +24,23 @@
         @Html.ValidationMessageFor(model => model.LoginPassword, "", new { @class = "text-danger" })
     </div>
 </div>
-
+<p>@ViewData["INVALIDUSER"]</p>
 
 <div class="form-group row">
     <div class="col-md-offset-2 col-md-10">
         <input type="submit" value="LOGIN" class="btn btn-outline-success" />
     </div>
 </div>
+}}
+else{
+    <p>Your Account is Locked
+        Please Use the ForgotPassword option To reset Your passord 
+        and that will Allow you to Login again
+    </p>
 }
 
 <div class="form-group row">
     <div class="col-md-offset-2 col-md-10">
-      @Html.ActionLink("GenerateOtp","GenerateOtp","User")
+      @Html.ActionLink("Forgot Password","GenerateOtp","User")
     </div>
 </div>
